tests/machine/x/st/len_map.out
Object: 2 error: did not understand #do:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
SmallInteger(Object)>>doesNotUnderstand: #do: (SysExcept.st:1448)
Dictionary class>>from: (Dictionary.st:57)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/len_map.st:3)