tests/machine/x/st/len_map.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:27Z
"
Transcript show: ((Dictionary from: {'a' -> 1. 'b' -> 2} size)) printString; cr.
